# phototext

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  IMALINK_INTEGRATION.md  LICENSE  QUICKSTART.md  README.md  REPO_STRUCTURE.md  demo.html  package-lock.json  package.json  pyproject.toml
.github/: copilot-instructions.md
examples/: basic_usage.py
js/: README.md  editor.ts  jest.config.js  package-lock.json  package.json  phototext.ts  tsconfig.json
js/__tests__/: hierarchical.test.ts  phototext.test.ts
js/examples/: README.md  basic-usage.html  editor-demo.html
phototext/: __init__.py  core.py
tests/: test_core.py
